--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -82,6 +82,6 @@ login:
   pureLogin: Login
   pureLoginSuccess: Login Success
   pureLoginFail: Login Fail
-  pureUsernameReg: Please enter username
+  pureUsernameReg: Please enter accountName
   purePassWordReg: Please enter password
   purePassWordRuleReg: The password format should be any combination of 8-18 digits
